<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_10mdp"
    tools:context=".ui.menu.MenuFragment">

    <!--Meal-->
    <TextView
        android:id="@+id/tvMeal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10mdp"
        android:text="@string/meal_types"
        android:textColor="@color/jacarta"
        android:textSize="@dimen/_12font_mdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Chip-->
    <HorizontalScrollView
        android:id="@+id/scrollMeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/tvMeal">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/mealGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10mdp"
            app:chipSpacing="0dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true" />

    </HorizontalScrollView>

    <!--Diet-->
    <TextView
        android:id="@+id/tvDiet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10mdp"
        android:layout_marginTop="@dimen/_20mdp"
        android:text="@string/diet_types"
        android:textColor="@color/jacarta"
        android:textSize="@dimen/_12font_mdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollMeal" />

    <!--Chip-->
    <HorizontalScrollView
        android:id="@+id/scrollDiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/tvDiet">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/dietGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10mdp"
            app:chipSpacing="0dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true" />

    </HorizontalScrollView>

    <!--BtnSubmit-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10mdp"
        android:layout_marginTop="@dimen/_20mdp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/persianGreen"
        app:cornerRadius="@dimen/_8mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollDiet" />

</androidx.constraintlayout.widget.ConstraintLayout>